# SI

./: DBGranular.md  package-lock.json  package.json  pyproject.toml
00_Assignments/: app.js  package-lock.json  package.json
00_Assignments/2._Assingment/: main.py
02_Data_Files/: me.csv  me.json  me.txt  me.xml  me.yaml  reader_parser.js
06_Servers/node/: package-lock.json
06_Servers/python/: main.py
08_server_to_erver/node/: app.js
08_server_to_erver/python/: main.py  pyproject.toml
09_Environment_Variables/node/: index.js  package.json
09_Environment_Variables/python/: .env_template  main.py  pyproject.toml
10_Date/node/: index.js
10_Date/python/: main.py
11._Short_Polling/node/: app.js  package.json
11._Short_Polling/node/public/: index.html
12._long_polling/node/: app.js
13._Server-sent_Events/node/: app.js
